# agentic-ai-production-system

./: .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REFRESH_LOG.md  REFRESH_LOG.txt  SECURITY.md  docker-compose.yml  pyproject.toml  record_repo.py  showcase.tape
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  eval-on-pr.yml
assets/: sample_conversations.md
benchmarks/: cost_comparison.py  results.md  throughput_vs_concurrency.py
configs/: llm.yaml  observability.yaml  rag.yaml
core/: config.py  exceptions.py
docs/: architecture.md  failures.md  scaling.md  security.md  tradeoffs.md
docs/incidents/: 2025-04-01_prompt_leak.md
entrypoints/: README.md
entrypoints/api/: main.py  schemas.py
entrypoints/api/middleware/: __init__.py  rate_limit.py  request_id.py
entrypoints/api/routes/: __init__.py  chat.py  feedback.py  health.py  ingest.py
entrypoints/cli/: agent_cli.py
entrypoints/frontend/: app.py
entrypoints/frontend/components/: README.md
entrypoints/worker/: background_processor.py
evaluation/: README.md
evaluation/ci_cd/: assert_latency.py
evaluation/offline/: custom_metrics.py  ragas_evaluator.py  run_on_testset.py
evaluation/online/: confusion_logger.py  drift_detector.py
execution/: README.md
execution/sandbox/: docker_sandbox.py
execution/tools/: calculator.py  code_interpreter.py  registry.py  web_search.py
experiments/: 01_hybrid_rag_benchmark.ipynb  02_agent_vs_rag.ipynb  03_tool_selection.ipynb  04_prompt_optimization.ipynb  05_cost_latency.ipynb  06_feedback_loop.ipynb  07_hybrid_vs_naive_rag.ipynb
human_in_loop/: active_learner.py  approval_gate.py  feedback_store.py
infra/: README.md
llm/: README.md
llm/cache/: exact_cache.py  semantic_cache.py
llm/prompt/: manager.py  optimizers.py
llm/prompt/templates/: README.md  planner.yaml  rag_answer.yaml
llm/providers/: anthropic.py  base.py  local_vllm.py  openai.py
observability/: README.md
observability/logging/: structured_logger.py
observability/metrics/: cost_tracker.py  prometheus.py
observability/tracing/: langfuse_integration.py
orchestration/: README.md  agent_state.py
orchestration/controllers/: executor.py  planner.py  reflector.py
orchestration/graph/: compiler.py  nodes.py  state.py
orchestration/memory/: long_term.py  short_term.py  summarizer.py
precision/: fp8_quant.py  kv_cache_quant.py
profiling/: bottleneck_analysis.ipynb  flops_counter.py  memory_tracer.py
rag/: README.md
rag/ingestion/: chunker.py  embedder.py  pipeline.py  vector_store.py
rag/pipelines/: full_rag.py
rag/retrieval/: context_compressor.py  hybrid.py  reranker.py
safety/: README.md
safety/audit/: log_all_inputs.py
safety/guards/: pii_scrubber.py  prompt_injection.py  toxicity_filter.py
safety/rate_limiter/: token_bucket.py
scripts/: generate_elite_notebooks.py  generate_mock_gif.py  generate_notebook.py  generate_testset.py  seed_data.py  sync.sh
tests/: conftest.py
tests/e2e/: test_api_live.py
tests/integration/: test_end_to_end.py  test_full_flow.py
tests/unit/: test_retrieval.py  test_safety.py  test_tools.py
