[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-ai-production-system"
version = "1.0.0"
description = "Production-grade agentic AI system"
authors = [
    {name = "Your Name", email = "your@email.com"},
]
license = {file = "LICENSE"}
requires-python = ">=3.11"

[project.dependencies]
python-dateutil = "^2.8.2"
langgraph = "^0.2.0"
langchain = "^0.0.96"
fastapi = "^0.95.0"
uvicorn = "^0.20.0"
faiss-cpu = "^1.7.2"
redis = "^4.3.4"
qdrant-client = "^0.10.0"
prometheus-client = "^0.14.1"
opentelemetry-api = "^1.10.0"
opentelemetry-sdk = "^1.10.0"
langfuse = "^0.1.0"
docker = "^6.0.0"
kubernetes = "^24.2.0"
terraform = "^0.15.0"

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "coverage[toml]",
    "pre-commit",
]
test = [
    "pytest",
    "pytest-asyncio",
    "coverage[toml]",
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
]

[project.scripts]
agentic-ai = "agentic_ai.main:main"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
fail_under = 80

[tool.hatch.version]
path = "agentic_ai/__init__.py"